Dark mode use qwanta theme

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,10 @@
 
 @use "sass:color";
 
+// Custom colors for QWANTA CD
+$qwanta-primary: #fde047 !default;
+$qwanta-neutral1: #cbd5e1 !default;
+
 // Colors
 $red-color: #ff3636 !default;
 $red-color-dark: #b71c1c !default;
